--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@nuxt/scripts": "^0.11.6",
     "@nuxt/ui": "^3.1.0",
     "@unhead/vue": "^2.0.8",
-    "nuxt": "^3.17.1",
+    "nuxt": "^3.16.2",
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.14.0"
   }
 }
