--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/image": "^1.10.0",
     "@nuxt/scripts": "^0.11.6",
     "@nuxt/ui": "^3.1.0",
+    "@nuxtjs/google-fonts": "^3.2.0",
     "@unhead/vue": "^2.0.8",
     "nuxt": "^3.16.2",
     "typescript": "^5.8.3",
