--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,4 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Connect to vps by using ssh
-        run: ssh -i {{secrets.SSH_PRIVATE_KEY}} -v ubuntu@51.38.227.177 -p 60313
+        run: echo "${{secrets.SSH_PRIVATE_KEY}}" > clave
+          chmod 600 clave
+          ssh -i clave -o StrictHostKeyChecking=no ubuntu@51.38.227.177 -p 60313
