--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/ui": "^3.1.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@unhead/vue": "^2.0.8",
+    "highlight.js": "^11.11.1",
     "nuxt": "^3.16.2",
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
